# birl_baxter_trac_ik

./: README.md
trac_ik_baxter/: CMakeLists.txt  README.md  getIk.py
trac_ik_baxter/launch/: ik_server.launch
trac_ik_baxter/src/: baxter_joint_client.cpp  ik_server.cpp
trac_ik_examples/: CMakeLists.txt  package.xml
trac_ik_examples/launch/: baxter_right_calibrate.launch
trac_ik_examples/src/: #baxter_trac_ik.cpp#  baxter_joint_pub.cpp  baxter_trac_ik.cpp  broadcast.cpp  getfk_solution.cpp  listener.cpp
trac_ik_examples/srv/: baxter_vision.srv
